--- a/src/styles/pokemoncard.css
+++ b/src/styles/pokemoncard.css
@@ -1,19 +1,3 @@
-
-
-/* Light mode */
-.pokemon-card.light {
-  --card-bg: #ffffff;
-  --card-text: #000000;
-}
-
-/* Dark mode */
-.pokemon-card.dark {
-  --card-bg: #1e1e1e;
-  --card-text: #f0f0f0;
-}
-
-
-
 .pokemon-card {
   width: 200px;
   height: 280px;
@@ -32,8 +16,6 @@
 .pokemon-card:hover {
   transform: scale(1.05);
 }
-
-
 
 .pokemon-card-top {
   flex: 2;
